<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/roomRootLayout"
    android:layout_width="242dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="14dp"
    android:layout_marginRight="14dp"
    android:background="@drawable/al_rich_message_border"
    android:elevation="2dp"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:visibility="visible" />

        <View
            android:id="@+id/productImageOverlay"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:alpha="0.25"
            android:visibility="visible" />

        <TextView
            android:id="@+id/productPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/al_rich_messaging_price_border"
            android:elevation="2dp"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0.04"
            android:paddingStart="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="7dp"
            android:paddingEnd="7dp"
            android:paddingRight="7dp"
            android:paddingBottom="7dp"
            android:text="$5000"
            android:textColor="#0d0d0e"
            android:textSize="16sp"
            android:textStyle="normal" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/productNameSingleLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="12"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:letterSpacing="0.04"
            android:maxLines="1"
            android:text="OYO Rooms Kodihalli (4.2/5)"
            android:textColor="#393838"
            android:textSize="16sp"
            android:textStyle="normal"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/productNameSplitLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/productName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="7dp"
                android:layout_weight="12"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:letterSpacing="0.04"
                android:maxWidth="170dp"
                android:maxLines="1"
                android:text="OYO Rooms Kodihalli"
                android:textColor="#393838"
                android:textSize="16sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/productRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_toEndOf="@+id/productName"
                android:layout_toRightOf="@+id/productName"
                android:layout_weight="2"
                android:textAlignment="textEnd"
                android:drawableStart="@drawable/offline_circle"
                android:drawableLeft="@drawable/offline_circle"
                android:ellipsize="end"
                android:fontFamily="sans-serif"
                android:letterSpacing="-0.01"
                android:maxLines="1"
                android:text="2078"
                android:textColor="#6a6868"
                android:textSize="12sp"
                android:textStyle="normal"
                android:visibility="visible" />
        </RelativeLayout>
    </FrameLayout>

    <TextView
        android:id="@+id/productLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif-medium"
        android:letterSpacing="0.04"
        android:maxLines="1"
        android:text="Bangalore India"
        android:textColor="#696767"
        android:textSize="14sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/productDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.04"
        android:maxLines="3"
        android:paddingBottom="4dp"
        android:text="This large room with hardwood floors features a sofa, city views, a piano with leather seats with a lot of"
        android:textColor="#827e7e"
        android:textSize="14sp"
        android:textStyle="normal" />

    <View
        android:id="@+id/viewAction1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e7e4e4" />

    <TextView
        android:id="@+id/bookingAction1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:letterSpacing="0.05"
        android:padding="5dp"
        android:text="VIEW DETAILS"
        android:textAlignment="center"
        android:textColor="#5c5aa7"
        android:textSize="12sp"
        android:textStyle="normal" />

    <View
        android:id="@+id/viewAction2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e7e4e4" />

    <TextView
        android:id="@+id/bookingAction2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:letterSpacing="0.05"
        android:padding="5dp"
        android:text="BOOK NOW"
        android:textAlignment="center"
        android:textColor="#5c5aa7"
        android:textSize="12sp"
        android:textStyle="normal"
        android:visibility="gone" />

    <View
        android:id="@+id/viewAction3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e7e4e4" />

    <TextView
        android:id="@+id/bookingAction3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:letterSpacing="0.05"
        android:padding="5dp"
        android:text="BOOK NOW OR NEVER"
        android:textAlignment="center"
        android:textColor="#5c5aa7"
        android:textSize="12sp"
        android:textStyle="normal"
        android:visibility="gone" />
</LinearLayout>