...
    android:layout_marginRight="10dp"
    android:gravity="start"
    android:orientation="vertical"
    android:visibility="gone">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/alGenericCardContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <!--Video Template -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/videoTemplateContainer"
        android:layout_width="wrap_content"
...
